--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -449,69 +449,69 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.47-SNAPSHOT</version>
+            <version>1.0.46</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.44-SNAPSHOT</version>
+            <version>1.1.43</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.49-SNAPSHOT</version>
+            <version>1.0.48</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition</artifactId>
-            <version>1.0.41-SNAPSHOT</version>
+            <version>1.0.40</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>structuredexportmanager</artifactId>
-            <version>1.0.47-SNAPSHOT</version>
+            <version>1.0.46</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation</artifactId>
-            <version>1.0.50-SNAPSHOT</version>
+            <version>1.0.49</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation_presentation</artifactId>
-            <version>1.0.50-SNAPSHOT</version>
+            <version>1.0.49</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone_presentation</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.2.2</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>dataacquisition_presentation</artifactId>
-            <version>1.0.41-SNAPSHOT</version>
+            <version>1.0.40</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>transformation</artifactId>
-            <version>1.0.32-SNAPSHOT</version>
+            <version>1.0.31</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -524,21 +524,21 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search</artifactId>
-            <version>1.0.44-SNAPSHOT</version>
+            <version>1.0.43</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search_presentation</artifactId>
-            <version>1.0.44-SNAPSHOT</version>
+            <version>1.0.43</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>syndication_presentation</artifactId>
-            <version>1.0.28-SNAPSHOT</version>
+            <version>1.0.27</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
@@ -559,21 +559,21 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>sword_presentation</artifactId>
-            <version>1.0.23-SNAPSHOT</version>
+            <version>1.0.22</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.2.2</version>
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
         <dependency>
            <groupId>de.mpg.escidoc.services</groupId>
            <artifactId>pid_cache_presentation</artifactId>
-           <version>0.1.7-SNAPSHOT</version>
+           <version>0.1.6</version>
            <scope>compile</scope>
            <type>war</type>
        </dependency>
