--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -238,3 +238,8 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
+
+escidoc.syndication.maximum.records=${escidoc.syndication.maximum.records}
+escidoc.syndication.ttl=${escidoc.syndication.ttl}
+escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
+escidoc.syndication.service.url=${escidoc.syndication.service.url}
