--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -395,5 +395,10 @@
         	<version>1.5.1</version>
         	<scope>test</scope>
         </dependency>
+	    <dependency>
+	      	<groupId>com.maxmind.geoip</groupId>
+	      	<artifactId>geoip</artifactId>
+	      	<version>1.2.3</version>
+    	</dependency>
     </dependencies>
 </project>
