--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -210,13 +210,13 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation_presentation</artifactId>
-            <version>1.0.51</version>
+            <version>1.0.52-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.48</version>
+            <version>1.0.49-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -239,13 +239,13 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>cone</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.5-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.45</version>
+			<version>1.1.46-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
